[package]
name = "bluesky-example-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
atrium-api = { git = "https://github.com/pmsanford/atrium.git", branch = "owned-auth-value" }
chrono = "0.4.26"
chrono-tz = "0.8.2"
jwt = "0.16.0"
lazy_static = "1.4.0"
regex = "1.8.4"
reqwest = "0.11.18"
rustyline = "11.0.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
